--- a/html/style.css
+++ b/html/style.css
@@ -1,13 +1,14 @@
 .container {
     margin-left: auto;
     margin-right: auto;
-    max-width: 500px;
+    max-width: 460px;
+    font-family: arial;
 }
 
 .aqi-container {
     border: 3px solid;
     border-radius: 10px;
-    width: 200px;
+    width: 180px;
     float: left;
     margin: 10px;
     text-align: center;
@@ -15,19 +16,27 @@
 }
 
 .aqi {
-    font-size: 6em;
+    font-size: 5em;
     font-weight: bold;
+}
+
+.legend {
+  font-style: italic;
 }
 
 .pm-label {
-    font-style: italic;
+   font-weight: normal; 
 }
+
 
 .time {
     text-align: center;
-    font-weight: bold;
 }
 
 h1 {
   text-align: center;
+}
+
+.aqi-label {
+  font-weight: bold;
 }
